#919 remove path on helm grafan ingress

--- a/helm/grafana/templates/ingress.yaml
+++ b/helm/grafana/templates/ingress.yaml
@@ -18,8 +18,7 @@ spec:
     - host: {{ .Values.ingress.fqdn }}
       http:
         paths:
-          - path: /
-            backend:
+          - backend:
               serviceName: {{ printf "%s-%s" $releaseName "grafana" | trunc 63 }}
               servicePort: 80
   {{- if .Values.ingress.tls }}
